# adventOfCode2023

./: README.md  pyproject.toml  test_solve_day.py
adventofcode2023/: aocinput.py  day1.py  day1v2.py  day2.py  day3.py
data/: day3.answer
tests/: test_day.py  test_day1.py
