[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Shahvir Buhariwalla <shahvirb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "adventofcode2023"